fixed overflow. Removed commented out code. Removed rounded border for video.

--- a/src/components/Landing/Landing.module.css
+++ b/src/components/Landing/Landing.module.css
@@ -5,6 +5,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Lato", sans-serif;
+    overflow: hidden;
 }
 
 
@@ -38,7 +39,6 @@ h1 .oranges{
 .video{
     width: 100%;
     height: 100%;
-    border-radius: 0 0 10px 0;
     object-fit: cover;
 }
 
@@ -46,8 +46,6 @@ h1 .oranges{
     width: 30%;
     height: 80%;
     margin-right: 1rem;
-    /* background: rgba(255, 255, 255, 0.8); */
-    /* border: black solid 3px; */
     border-radius: 10px;
     display: flex;
     justify-content: center;
